--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="https://instagram.com/ankit._2503?igshid=ZDdkNTZiNTM=" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="https://www.facebook.com/ankit.arora.33865854?mibextid=ZbWKwL" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.facebook.com/ankit.arora.33865854?mibextid=ZbWKwL" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://instagram.com/ankit._2503?igshid=ZDdkNTZiNTM=" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://www.linkedin.com/in/ankit-a-228414109" class="icon brands fa-github"><span class="label">Linkedin</span></a></li>
 								</ul>
 							</article>
